--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,22 +1,22 @@
 ---
-import Podcast from '../components/Podcast.astro';
-import Events from '../components/Events.astro';
-import Features from '../components/Features.astro';
-import HeroSection from '../components/HeroSection.astro';
-import Layout from '../layouts/Layout.astro';
-import Testimonials from '../components/Testimonials.astro';
-import CallToAction from '../components/CallToAction.astro';
-import Blog from '../components/Blog.astro';
+import Podcast from "../components/Podcast.astro";
+import Events from "../components/Events.astro";
+import Features from "../components/Features.astro";
+import HeroSection from "../components/HeroSection.astro";
+import Layout from "../layouts/Layout.astro";
+import Testimonials from "../components/Testimonials.astro";
+import CallToAction from "../components/CallToAction.astro";
+import Blog from "../components/Blog.astro";
 ---
 
 <Layout title="Welcome to Astrolus.">
-	<main class="space-y-40 mb-40">
-		<HeroSection/>
-		<Features/>
-		<Events/>
-		<Podcast/>
-		<Testimonials/>
-		<CallToAction/>
-		<!-- <Blog/> -->
-	</main>
+  <main class="space-y-40 mb-40">
+    <HeroSection />
+    <Features />
+    <Events />
+    <Podcast />
+    <Testimonials />
+    <CallToAction />
+    <!-- <Blog/> -->
+  </main>
 </Layout>
