docs: Update podcast title

--- a/src/components/Podcast.astro
+++ b/src/components/Podcast.astro
@@ -20,7 +20,7 @@ import Container from "./Container.astro";
       <div class="md:7/12 lg:w-1/2">
         
         <h2 class="text-3xl font-bold text-gray-900 md:text-4xl">
-          The Dialectic | Podcast by FOSS NSBM
+          The Dialectic | A Podcast by FOSS NSBM
         </h2>
         <p class="my-8 text-gray-600">
           Dialectic is a podcast by FOSS Community of NSBM. It is a platform
