refactor: Convert png into webp issue #7

--- a/src/components/Events.astro
+++ b/src/components/Events.astro
@@ -20,7 +20,7 @@ import Container from "./Container.astro";
       >
         <div class="relative overflow-hidden rounded-xl">
           <img
-            src="./images/events/SFD1.JPG"
+            src="./images/events/SFD1.webp"
             alt="FOSS Community of NSBM - SFD 2023"
             loading="lazy"
             width="1000"
@@ -45,7 +45,7 @@ import Container from "./Container.astro";
       >
         <div class="relative overflow-hidden rounded-xl">
           <img
-            src="./images/events/nmc.jpg"
+            src="./images/events/nmc.webp"
             alt="art cover"
             loading="lazy"
             width="1000"
@@ -70,7 +70,7 @@ import Container from "./Container.astro";
       >
         <div class="relative overflow-hidden rounded-xl">
           <img
-            src="./images/events/technosphere.jpg"
+            src="./images/events/technosphere.webp"
             alt="art cover"
             loading="lazy"
             width="1000"
