--- a/src/components/HeroSection.astro
+++ b/src/components/HeroSection.astro
@@ -80,7 +80,7 @@ import Container from "./Container.astro";
       >
         <div class="p-4 md:grayscale transition duration-200 hover:grayscale-0">
           <img
-            src="./images/communities/mozilla.png"
+            src="./images/communities/mozilla.webp"
             class="h-20 w-auto mx-auto"
             loading="lazy"
             alt="FOSS Community of NSBM - Mozilla Campus Club"
@@ -90,7 +90,7 @@ import Container from "./Container.astro";
         </div>
         <div class="p-4 md:grayscale transition duration-200 hover:grayscale-0">
           <img
-            src="./images/communities/croudsource.png"
+            src="./images/communities/croudsource.webp"
             class="h-20 md:h-22 w-auto mx-auto"
             loading="lazy"
             alt="FOSS Community of NSBM - Google Croudsource"
@@ -102,7 +102,7 @@ import Container from "./Container.astro";
           class="p-4 flex md:grayscale transition duration-200 hover:grayscale-0"
         >
           <img
-            src="./images/communities/devops.png"
+            src="./images/communities/devops.webp"
             class="h-9 w-auto m-auto"
             loading="lazy"
             alt="FOSS Community of NSBM - DevOps"
@@ -112,7 +112,7 @@ import Container from "./Container.astro";
         </div>
         <div class="p-4 md:grayscale transition duration-200 hover:grayscale-0">
           <img
-            src="./images/communities/wif.png"
+            src="./images/communities/wif.webp"
             class="h-12 w-auto mx-auto"
             loading="lazy"
             alt="FOSS Community of NSBM - Women in FOSS NSBM"
@@ -124,7 +124,7 @@ import Container from "./Container.astro";
           class="p-4 flex md:grayscale transition duration-200 hover:grayscale-0"
         >
           <img
-            src="./images/communities/devlab.png"
+            src="./images/communities/devlab.webp"
             class="h-20 w-auto m-auto"
             loading="lazy"
             alt="FOSS Community of NSBM - DevLab"
@@ -134,7 +134,7 @@ import Container from "./Container.astro";
         </div>
         <div class="p-4 md:grayscale transition duration-200 hover:grayscale-0">
           <img
-            src="./images/communities/owasp.png"
+            src="./images/communities/owasp.webp"
             class="h-20 w-auto mx-auto"
             loading="lazy"
             alt="FOSS Community of NSBM -  Open Worldwide Application Security Project"
@@ -144,7 +144,7 @@ import Container from "./Container.astro";
         </div>
         <div class="p-4 md:grayscale transition duration-200 hover:grayscale-0">
           <img
-            src="./images/communities/devoke.png"
+            src="./images/communities/devoke.webp"
             class="h-20 w-auto mx-auto"
             loading="lazy"
             alt="FOSS Community of NSBM - Devoke"
