--- a/src/components/Podcast.astro
+++ b/src/components/Podcast.astro
@@ -9,7 +9,7 @@ import Container from "./Container.astro";
     >
       <div class="md:5/12 lg:w-1/2">
         <img
-          src="./images/dialectic-spotify-gradient.png"
+          src="./images/dialectic-spotify-gradient.webp"
           alt="FOSS Community of NSBM - Dialectic by FOSS NSBM | A Podcat"
           loading="lazy"
           width=""
