--- a/src/components/Events.astro
+++ b/src/components/Events.astro
@@ -1,5 +1,6 @@
 ---
 import Container from "./Container.astro";
+import CardEvent from "./CardEvent.astro";
 ---
 
 <div id="blog">
@@ -14,83 +15,30 @@ import Container from "./Container.astro";
         learn and network with other professionals in the industry.
       </p>
     </div>
+
+
     <div class="grid gap-8 md:grid-cols-2 lg:grid-cols-3">
-      <div
-        class="group p-6 sm:p-8 rounded-3xl bg-white border border-gray-100 bg-opacity-50 shadow-2xl shadow-gray-600/10"
-      >
-        <div class="relative overflow-hidden rounded-xl">
-          <img
-            src="./images/events/SFD1.webp"
-            alt="FOSS Community of NSBM - SFD 2023"
-            loading="lazy"
-            width="1000"
-            height="667"
-            class="h-64 w-full object-cover object-top transition duration-500 group-hover:scale-105"
-          />
-        </div>
-        <div class="mt-6 relative">
-          <h3 class="text-2xl font-semibold text-gray-800">
-            Software Freedom Day Sri Lanka 2023
-          </h3>
-          <p class="mt-6 mb-8 text-gray-600">
-            The Software Freedom Day (SFD) is an annual worldwide celebration of Free Software. 
-          </p>
-          <a class="inline-block" href="https://www.facebook.com/foss.nsbm/posts/pfbid02VmHcJ3ZoAPGghZ12v3ziwALkmyP6Z4pjPyCzRKfcnD8LgniG6tp45VYFUuStyhaCl" target="_blank">
-          <span class="text-info">Read more</span>
-          </a>
-        </div>
-      </div>
-      <div
-        class="group p-6 sm:p-8 rounded-3xl bg-white border border-gray-100 bg-opacity-50 shadow-2xl shadow-gray-600/10"
-      >
-        <div class="relative overflow-hidden rounded-xl">
-          <img
-            src="./images/events/nmc.webp"
-            alt="art cover"
-            loading="lazy"
-            width="1000"
-            height="667"
-            class="h-64 w-full object-cover object-top transition duration-500 group-hover:scale-105"
-          />
-        </div>
-        <div class="mt-6 relative">
-          <h3 class="text-2xl font-semibold text-gray-800">
-            Node Meets Cloud | Cloud Session 2023
-          </h3>
-          <p class="mt-6 mb-8 text-gray-600">
-            Node Meets Cloud is a Azure Cloud Platform event that hosted by Microstoft Students Ambassadors.
-          </p>
-          <a class="inline-block" href="https://www.facebook.com/foss.nsbm/posts/pfbid02L6PED9FK47uijLzrUfN5Ceb2LT2DiXjfs9t55GppAw3QXkHVgqXAfVbLqY5yzNTAl" target="_blank">
-            <span class="text-info">Read more</span>
-          </a>
-        </div>
-      </div>
-      <div
-        class="group p-6 sm:p-8 rounded-3xl bg-white border border-gray-100 bg-opacity-50 shadow-2xl shadow-gray-600/10"
-      >
-        <div class="relative overflow-hidden rounded-xl">
-          <img
-            src="./images/events/technosphere.webp"
-            alt="art cover"
-            loading="lazy"
-            width="1000"
-            height="667"
-            class="h-64 w-full object-cover object-top transition duration-500 group-hover:scale-105"
-          />
-        </div>
-        <div class="mt-6 relative">
-          <h3 class="text-2xl font-semibold text-gray-800">
-            Technosphere | Tech Conference 2022
-          </h3>
-          <p class="mt-6 mb-8 text-gray-600">
-            Technosphere is a tech conference that brings together the best and brightest minds in the tech industry. 
-          </p>
-          <a class="inline-block" href="https://www.facebook.com/foss.nsbm" target="_blank" > 
-            <span class="text-info">Read more</span>
-          </a>
-        </div>
-      </div>
-      
+      <CardEvent 
+        image="./images/events/SFD1.webp"
+        alt="FOSS Community of NSBM - SFD 2023"
+        title="Software Freedom Day Sri Lanka 2023"
+        body="The Software Freedom Day (SFD) is an annual worldwide celebration of Free Software."
+        url="https://www.facebook.com/foss.nsbm/posts/pfbid02VmHcJ3ZoAPGghZ12v3ziwALkmyP6Z4pjPyCzRKfcnD8LgniG6tp45VYFUuStyhaCl"
+      />
+      <CardEvent 
+        image="./images/events/nmc.webp"
+        alt="art cover"
+        title="Node Meets Cloud | Cloud Session 2023"
+        body="Node Meets Cloud is a Azure Cloud Platform event that hosted by Microstoft Students Ambassadors."
+        url="https://www.facebook.com/foss.nsbm/posts/pfbid02L6PED9FK47uijLzrUfN5Ceb2LT2DiXjfs9t55GppAw3QXkHVgqXAfVbLqY5yzNTAl"
+      />
+      <CardEvent 
+        image="./images/events/technosphere.webp"
+        alt="art cover"
+        title="Technosphere | Tech Conference 2022"
+        body="Technosphere is a tech conference that brings together the best and brightest minds in the tech industry."
+        url="https://www.facebook.com/foss.nsbm"
+      />      
     </div>
   </Container>
 </div>
