add husky and make erros

--- a/src/components/Events.astro
+++ b/src/components/Events.astro
@@ -24,6 +24,7 @@ import CardEvent from "./CardEvent.astro";
         title="Software Freedom Day Sri Lanka 2023"
         body="The Software Freedom Day (SFD) is an annual worldwide celebration of Free Software."
         url="https://www.facebook.com/foss.nsbm/posts/pfbid02VmHcJ3ZoAPGghZ12v3ziwALkmyP6Z4pjPyCzRKfcnD8LgniG6tp45VYFUuStyhaCl"
+        button_text="Read More" 
       />
       <CardEvent 
         image="./images/events/nmc.webp"
@@ -31,6 +32,7 @@ import CardEvent from "./CardEvent.astro";
         title="Node Meets Cloud | Cloud Session 2023"
         body="Node Meets Cloud is a Azure Cloud Platform event that hosted by Microstoft Students Ambassadors."
         url="https://www.facebook.com/foss.nsbm/posts/pfbid02L6PED9FK47uijLzrUfN5Ceb2LT2DiXjfs9t55GppAw3QXkHVgqXAfVbLqY5yzNTAl"
+        button_text="Read More" 
       />
       <CardEvent 
         image="./images/events/technosphere.webp"
@@ -38,6 +40,7 @@ import CardEvent from "./CardEvent.astro";
         title="Technosphere | Tech Conference 2022"
         body="Technosphere is a tech conference that brings together the best and brightest minds in the tech industry."
         url="https://www.facebook.com/foss.nsbm"
+        button_text="Read More" 
       />      
     </div>
   </Container>
