--- a/src/components/RegisterCard.astro
+++ b/src/components/RegisterCard.astro
@@ -1,58 +1,6 @@
 ---
 import Container from './Container.astro';
-import { sql } from '../lib/neon';
 
-let responseSent = false;  // Track if a response is already sent
-
-if (Astro.request.method === "POST") {
-  try {
-    const contentType = Astro.request.headers.get("content-type") || "";
-    let data;
-
-    // Handle form data or JSON based on content type
-    if (contentType.includes("application/x-www-form-urlencoded") || contentType.includes("multipart/form-data")) {
-      data = await Astro.request.formData();
-    } else if (contentType.includes("application/json")) {
-      data = await Astro.request.json();
-    }
-
-    // Retrieve form data
-    const firstname = data.get("firstname");
-    const lastname = data.get("lastname");
-    const email = data.get("email");
-    const phone = data.get("phone");
-    const batch = data.get("batch");
-    const department = data.get("department");
-
-    // Check for required fields
-    if (!firstname || !lastname || !email || !phone || !batch || !department) {
-      if (!responseSent) {
-        responseSent = true;
-        return new Response('Missing required fields.', { status: 400 });
-      }
-    }
-
-    console.log("Name:", `${firstname} ${lastname}`);
-    console.log("Email:", email);
-    console.log("Phone:", phone);
-    console.log("Batch:", batch);
-    console.log("Department:", department);
-
-    // Insert data into the database
-    await sql`
-      INSERT INTO users (firstname, lastname, email, phone, batch, department) 
-      VALUES (${firstname}, ${lastname}, ${email}, ${phone}, ${batch}, ${department})
-    `;
-
-   
-  } catch (error) {
-    console.error("Error storing data:", error);
-    if (!responseSent) {
-      responseSent = true;
-      return new Response('Error storing data.', { status: 500 });
-    }
-  }
-}
 ---
 
 <Container>
@@ -65,7 +13,7 @@ if (Astro.request.method === "POST") {
 
     <div class="mt-8 sm:mx-auto sm:w-full sm:max-w-md">
       <div class="bg-white py-8 px-4 shadow-2xl sm:rounded-lg sm:px-10">
-        <form class="space-y-6" action="/register" method="POST" enctype="application/x-www-form-urlencoded">
+        <form class="space-y-6"  method="POST" action="/api/register">
           <div>
             <label for="email" class="block text-lg font-medium text-gray-700">
               Email
