--- a/src/components/RegisterCard.astro
+++ b/src/components/RegisterCard.astro
@@ -78,9 +78,40 @@ import Container from './Container.astro';
                 />
                 <label for="batch-23.1" class="ms-2 text-sm font-medium text-gray-900">23.1</label>
               </div>
+              <div class="flex items-center me-4">
+                <input 
+                  id="batch-23.2" 
+                  type="radio" 
+                  value="23.2" 
+                  name="batch" 
+                  class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 focus:ring-blue-500"
+                />
+                <label for="batch-23.2" class="ms-2 text-sm font-medium text-gray-900">23.2</label>
+              </div>
+              <div class="flex items-center me-4">
+                <input 
+                  id="batch-24.1" 
+                  type="radio" 
+                  value="24.1" 
+                  name="batch" 
+                  class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 focus:ring-blue-500"
+                />
+                <label for="batch-24.1" class="ms-2 text-sm font-medium text-gray-900">24.1</label>
+              </div>
+              <div class="flex items-center me-4">
+                <input 
+                  id="batch-24.2" 
+                  type="radio" 
+                  value="24.2" 
+                  name="batch" 
+                  class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 focus:ring-blue-500"
+                />
+                <label for="batch-24.2" class="ms-2 text-sm font-medium text-gray-900">24.2</label>
+              </div>
               <!-- Add other batch radio inputs here as needed -->
             </div>
           </div>
+          
 
           <div>
             <label for="phone" class="block text-lg font-medium text-gray-700">
