--- a/src/components/AppHeader.astro
+++ b/src/components/AppHeader.astro
@@ -16,7 +16,7 @@ import Container from "./Container.astro";
           class="hidden peer"
         />
         <div class="relative z-20 w-full flex justify-between lg:w-max md:px-0">
-          <a href="#home" aria-label="logo" class="flex space-x-2 items-center">
+          <a href="/" aria-label="logo" class="flex space-x-2 items-center">
             <img
               src="/images/communities/foss.webp"
               alt="FOSS LOGO"
@@ -96,7 +96,7 @@ import Container from "./Container.astro";
 
           <div class="mt-12 lg:mt-0">
             <a
-              href="#"
+              href="/"
               class="relative flex h-9 w-full items-center justify-center px-4 before:absolute before:inset-0 before:rounded-full before:bg-primary before:transition before:duration-300 hover:before:scale-105 active:duration-75 active:before:scale-95 sm:w-max"
             >
               <span class="relative text-sm font-semibold text-white"
