make some features

--- a/src/components/HeroSection.astro
+++ b/src/components/HeroSection.astro
@@ -42,10 +42,11 @@ import Container from "./Container.astro";
         </p>
         <div class="mt-16 flex flex-wrap justify-center gap-y-4 gap-x-6">
           <a
-            href="/login"
+          href="/login"
             target="_blank"
             class="relative flex h-11 w-full items-center justify-center px-6 before:absolute before:inset-0 before:rounded-full before:bg-primary before:transition before:duration-300 hover:before:scale-105 active:duration-75 active:before:scale-95 sm:w-max"
-          >
+            data-astro-transition
+            >
 
             <span class="relative text-base font-semibold text-white"
               >Become a volunteer</span
