--- a/src/components/RegisterCard.astro
+++ b/src/components/RegisterCard.astro
@@ -1,6 +1,7 @@
 ---
 import Container from './Container.astro';
-
+import { getSession } from "auth-astro/server";
+const session = await getSession(Astro.request);
 ---
 
 <Container>
@@ -14,7 +15,7 @@ import Container from './Container.astro';
     <div class="mt-8 sm:mx-auto sm:w-full sm:max-w-md">
       <div class="bg-white py-8 px-4 shadow-2xl sm:rounded-lg sm:px-10">
         <form class="space-y-6"  method="POST" action="/api/register">
-          <div>
+          <div class=" hidden">
             <label for="email" class="block text-lg font-medium text-gray-700">
               Email
             </label>
@@ -22,11 +23,14 @@ import Container from './Container.astro';
               <input 
                 id="email" 
                 name="email" 
+                value={session?.user?.email as string}
                 type="email" 
                 autocomplete="email" 
+                readonly
                 required
                 class="appearance-none rounded-md relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10 sm:text-sm"
                 placeholder="Enter your email address"
+                
               />
             </div>
           </div>
