--- a/src/components/Events.astro
+++ b/src/components/Events.astro
@@ -1,9 +1,10 @@
 ---
 import Container from "./Container.astro";
 import CardEvent from "./CardEvent.astro";
+
 ---
 
-<div id="blog">
+<div class="pt-32">
   <Container>
     <div class="mb-12 space-y-2 text-center">
       <h2 class="text-3xl font-bold text-gray-800 md:text-4xl">
@@ -42,6 +43,6 @@ import CardEvent from "./CardEvent.astro";
         url="https://www.facebook.com/foss.nsbm"
         button_text="Read More" 
       />      
-    </div>
+    </div> 
   </Container>
 </div>
