--- a/src/components/Podcast.astro
+++ b/src/components/Podcast.astro
@@ -79,8 +79,8 @@ import Container from "./Container.astro";
           </div>
         </div>
         <div class="flex rounded-full mt-10">
-          <div class="bg-blue-600 py-3 px-8 text-gray-50 rounded-full">
-            Coming soon
+          <div class="bg-blue-600 py-3 px-8 text-gray-50 rounded-full cursor-pointer">
+            <a href="https://dialectic.fossnsbm.org/" class="text-lg font-semibold">Listen Now</a>
           </div>
         </div>
       </div>
