--- a/src/pages/event.astro
+++ b/src/pages/event.astro
@@ -4,9 +4,12 @@ import AppHeader from "../components/AppHeader.astro";
 import RegisterCard from "../components/RegisterCard.astro";
 import { getSession } from "auth-astro/server";
 import { sql } from "../lib/neon";
+import  Event  from "../components/Events.astro";
+import { getSession } from "auth-astro/server";
+import { sql } from "../lib/neon";
 const session = await getSession(Astro.request);
 
-if (session && session.user) {
+if (session ) {
   
 
   const emailExists = await sql`
@@ -17,14 +20,15 @@ if (session && session.user) {
     
     if (emailExists[0].count > 0) {
       console.log("Email is already registered.");
-      return Astro.redirect('/event');  
+     
     }
+	else{
+		return Astro.redirect('/register');  
+	}
 
   
 
 }
-
-
 ---
 
 
@@ -56,8 +60,10 @@ if (session && session.user) {
 
 	<body class="bg-white">
 		<AppHeader/>
-		 <RegisterCard/>
-		<AppFooter/>
+		
+		<Event/> 
+
+		
 	</body>
 </html>
 <style>
