--- a/src/components/HeroSection.astro
+++ b/src/components/HeroSection.astro
@@ -1,5 +1,8 @@
 ---
 import Container from "./Container.astro";
+import { getSession } from "auth-astro/server";
+
+const session = await getSession(Astro.request);
 ---
 
 <div class="relative" id="home">
@@ -41,25 +44,52 @@ import Container from "./Container.astro";
           and innovation.
         </p>
         <div class="mt-16 flex flex-wrap justify-center gap-y-4 gap-x-6">
+          
+            {!session ?(
+
           <a
-          href="/login"
-            target="_blank"
+           href="/login"
+          
             class="relative flex h-11 w-full items-center justify-center px-6 before:absolute before:inset-0 before:rounded-full before:bg-primary before:transition before:duration-300 hover:before:scale-105 active:duration-75 active:before:scale-95 sm:w-max"
             data-astro-transition
+            
             >
 
             <span class="relative text-base font-semibold text-white"
-              >Become a volunteer</span
-            >
+              >Become a volunteer</span >
           </a>
-          <a
-            href="#"
-            class="relative flex h-11 w-full items-center justify-center px-6 before:absolute before:inset-0 before:rounded-full before:border before:border-transparent before:bg-primary/10 before:bg-gradient-to-b before:transition before:duration-300 hover:before:scale-105 active:duration-75 active:before:scale-95 sm:w-max"
-          >
-            <span class="relative text-base font-semibold text-primary"
-              >Learn more</span
-            >
-          </a>
+          
+
+            ):
+            
+            
+            (<div>
+              <div class="flex justify-center w-full flex-col text-center gap-5">
+               <h1 class=" text-gray-900 font-medium text-4xl">Welcome to the Foss Community</h1>
+               <h2>{session.user?.name}</h2>
+               <div class="w-full justify-center flex">
+               <a href="#" class="relative flex h-11 w-full items-center justify-center  px-6 before:absolute before:inset-0 before:rounded-full before:border before:border-transparent before:bg-primary/10 before:bg-gradient-to-b before:transition before:duration-300 hover:before:scale-105 active:duration-75 active:before:scale-95 sm:w-max" >
+                        <span class="relative text-base font-semibold text-primary"
+                          >Learn more</span>
+                      </a>
+                    </div>
+              </div>
+              
+              
+             
+               
+               
+                   
+               
+
+            </div>
+
+            )}
+         
+
+
+       
+          
         </div>
         <div
           class="hidden py-8 mt-16 border-y border-gray-100 sm:flex justify-between"
