--- a/src/components/AppHeader.astro
+++ b/src/components/AppHeader.astro
@@ -11,7 +11,8 @@ const session = await getSession(Astro.request);
 ---
 
 <header>
-  <nav class="z-10 w-full absolute">
+  <nav class="z-10 w-full fixed top-0 h-max  backdrop-blur-md  ">
+    
     <Container>
       <div
         class="flex flex-wrap items-center justify-between py-2 gap-6 md:py-4 md:gap-0 relative"
@@ -55,16 +56,17 @@ const session = await getSession(Astro.request);
           class="fixed z-10 inset-0 h-screen w-screen bg-white/70 backdrop-blur-2xl origin-bottom scale-y-0 transition duration-500 peer-checked:origin-top peer-checked:scale-y-100 lg:hidden"
         >
         </div>
+        
         <div
-          class="flex-col z-20 flex-wrap gap-6 p-8 rounded-3xl border border-gray-100 bg-white shadow-2xl shadow-gray-600/10 justify-end w-full invisible opacity-0 translate-y-1 absolute top-full left-0 transition-all duration-300 scale-95 origin-top lg:relative lg:scale-100 lg:peer-checked:translate-y-0 lg:translate-y-0 lg:flex lg:flex-row lg:items-center lg:gap-0 lg:p-0 lg:bg-transparent lg:w-7/12 lg:visible lg:opacity-100 lg:border-none peer-checked:scale-100 peer-checked:opacity-100 peer-checked:visible lg:shadow-none"
+          class="flex-col  z-20 flex-wrap gap-6 p-8 rounded-3xl border border-gray-100 bg-white shadow-2xl shadow-gray-600/10 justify-end w-full invisible opacity-0 translate-y-1 absolute top-full left-0 transition-all duration-300 scale-95 origin-top lg:relative lg:scale-100 lg:peer-checked:translate-y-0 lg:translate-y-0 lg:flex lg:flex-row lg:items-center lg:gap-0 lg:p-0 lg:bg-transparent lg:w-7/12 lg:visible lg:opacity-100 lg:border-none peer-checked:scale-100 peer-checked:opacity-100 peer-checked:visible lg:shadow-none"
         >
-          <div class="text-gray-600 lg:pr-4 lg:w-auto w-full lg:pt-0">
+          <div class="text-gray-600 lg:pr-4 lg:w-auto w-full lg:pt-0  ">
             <ul
               class="tracking-wide font-medium lg:text-sm flex-col flex lg:flex-row gap-6 lg:gap-0"
             >
               <li>
                 <a
-                  href="#about"
+                  href="/#about"
                   class="block md:px-4 transition hover:text-primary"
                 >
                   <span>About</span>
@@ -72,7 +74,7 @@ const session = await getSession(Astro.request);
               </li>
               <li>
                 <a
-                  href="#events"
+                  href="/#events"
                   class="block md:px-4 transition hover:text-primary"
                 >
                   <span>Events</span>
@@ -80,7 +82,7 @@ const session = await getSession(Astro.request);
               </li>
               <li>
                 <a
-                  href="#testimonials"
+                  href="/#testimonials"
                   class="block md:px-4 transition hover:text-primary"
                 >
                   <span>Testimonials</span>
@@ -88,7 +90,7 @@ const session = await getSession(Astro.request);
               </li>
               <li>
                 <a
-                  href="#blog"
+                  href="/#blog"
                   class="block md:px-4 transition hover:text-primary"
                 >
                   <span>Blog</span>
