--- a/src/components/HeroSection.astro
+++ b/src/components/HeroSection.astro
@@ -111,7 +111,7 @@ const session = await getSession(Astro.request);
       <div
         class="mt-12 grid grid-cols-1 sm:grid-cols-4 md:grid-cols-7 items-center"
       >
-        <div class="p-4 md:grayscale transition duration-200 hover:grayscale-0">
+        <div class="p-4  transition duration-200 ">
           <img
             src="./images/communities/mozilla.webp"
             class="h-20 w-auto mx-auto"
@@ -121,7 +121,7 @@ const session = await getSession(Astro.request);
             height=""
           />
         </div>
-        <div class="p-4 md:grayscale transition duration-200 hover:grayscale-0">
+        <div class="p-4  transition duration-200 ">
           <img
             src="./images/communities/croudsource.webp"
             class="h-20 md:h-22 w-auto mx-auto"
@@ -132,7 +132,7 @@ const session = await getSession(Astro.request);
           />
         </div>
         <div
-          class="p-4 flex md:grayscale transition duration-200 hover:grayscale-0"
+          class="p-4 flex  transition duration-200 "
         >
           <img
             src="./images/communities/devops.webp"
@@ -143,7 +143,7 @@ const session = await getSession(Astro.request);
             height=""
           />
         </div>
-        <div class="p-4 md:grayscale transition duration-200 hover:grayscale-0">
+        <div class="p-4  transition duration-200 ">
           <img
             src="./images/communities/wif.webp"
             class="h-12 w-auto mx-auto"
@@ -154,7 +154,7 @@ const session = await getSession(Astro.request);
           />
         </div>
         <div
-          class="p-4 flex md:grayscale transition duration-200 hover:grayscale-0"
+          class="p-4 flex transition duration-200 "
         >
           <img
             src="./images/communities/devlab.webp"
@@ -165,7 +165,7 @@ const session = await getSession(Astro.request);
             height=""
           />
         </div>
-        <div class="p-4 md:grayscale transition duration-200 hover:grayscale-0">
+        <div class="p-4  transition duration-200 ">
           <img
             src="./images/communities/owasp.webp"
             class="h-20 w-auto mx-auto"
@@ -175,7 +175,7 @@ const session = await getSession(Astro.request);
             height=""
           />
         </div>
-        <div class="p-4 md:grayscale transition duration-200 hover:grayscale-0">
+        <div class="p-4  transition duration-200 ">
           <img
             src="./images/communities/devoke.webp"
             class="h-20 w-auto mx-auto"
