make some fixess

--- a/src/components/RegisterCard.astro
+++ b/src/components/RegisterCard.astro
@@ -78,6 +78,7 @@ const session = await getSession(Astro.request);
                   type="radio" 
                   value="23.1" 
                   name="batch" 
+                  required
                   class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 focus:ring-blue-500"
                 />
                 <label for="batch-23.1" class="ms-2 text-sm font-medium text-gray-900">23.1</label>
@@ -87,6 +88,7 @@ const session = await getSession(Astro.request);
                   id="batch-23.2" 
                   type="radio" 
                   value="23.2" 
+                  required
                   name="batch" 
                   class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 focus:ring-blue-500"
                 />
@@ -98,6 +100,7 @@ const session = await getSession(Astro.request);
                   type="radio" 
                   value="24.1" 
                   name="batch" 
+                  required
                   class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 focus:ring-blue-500"
                 />
                 <label for="batch-24.1" class="ms-2 text-sm font-medium text-gray-900">24.1</label>
@@ -108,6 +111,7 @@ const session = await getSession(Astro.request);
                   type="radio" 
                   value="24.2" 
                   name="batch" 
+                  required
                   class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 focus:ring-blue-500"
                 />
                 <label for="batch-24.2" class="ms-2 text-sm font-medium text-gray-900">24.2</label>
@@ -125,6 +129,7 @@ const session = await getSession(Astro.request);
               <input 
                 id="phone" 
                 name="phone" 
+                required
                 type="tel" 
                 required
                 oninput="this.value = this.value.replace(/[^0-9]/g, '');"
@@ -148,10 +153,33 @@ const session = await getSession(Astro.request);
                 class="appearance-none rounded-md block w-full px-3 py-2 border border-gray-300 bg-white text-gray-900 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm"
               >
                 <option value="">Select your department</option>
-                <option value="CS">Computer Science</option>
-                <option value="IT">Information Technology</option>
-                <option value="SE">Software Engineering</option>
-                <option value="DS">Data Science</option>
+                <option value="Computer_Science">Computer Science</option>
+                <option value="Information_Technology">Information Technology</option>
+                <option value="Software_Engineering">Software Engineering</option>
+                <option value="Data_Science">Data Science</option>
+                <option value="Computer_Networking">Computer Networking</option>
+                <option value="Computer_Security">Computer Security</option>
+              </select>
+            </div>
+          </div>
+
+          
+          <div>
+            <label for="attitude" class="block text-lg font-medium text-gray-700">
+             Career focus
+            </label>
+            <div class="mt-1">
+              <select 
+                id="focus" 
+                name="focus" 
+                required
+                class="appearance-none rounded-md block w-full px-3 py-2 border border-gray-300 bg-white text-gray-900 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm"
+              >
+                <option value="">Select your Focus</option>
+                <option value="designing">Designing</option>
+                <option value="development">Development</option>
+                <option value="post_editing">Post Editing</option>
+                <option value="Vedio_editing">Vedio Editing</option>
               </select>
             </div>
           </div>
