--- a/src/pages/event.astro
+++ b/src/pages/event.astro
@@ -12,7 +12,7 @@ if (session && session.user && session.user.email) {
 
   const emailExists = await sql`
       SELECT COUNT(*) 
-      FROM users 
+      FROM register 
       WHERE email = ${session.user.email}
     `;
     
